--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Node Chat App</title>
 </head>
-<body>
-    <p>Welcome to the chat app</p>
+<body class="chat">
 
-    <ol id="messages"></ol>
+    <div class="chat__sidebar">
+        <h3>Pals</h3>
+        <div id="users">
 
-    <form id="message-form">
-        <input 
-            type="text" 
-            name="message"
-            placeholder="Message"
-        >
-        <button>Send</button>
-    </form>
-    <button id="send-location">Send Location</button>
+        </div>
+    </div>
+
+    <div class="chat__main">
+        <ol class="chat__messages" id="messages"></ol>
+
+        <footer class="chat__footer">
+            <form id="message-form">
+                <input 
+                    type="text" 
+                    name="message"
+                    placeholder="Message"
+                    autofocus
+                    autocomplete="off"
+                >
+                <button>Send</button>
+            </form>
+            <button id="send-location">Send location</button>
+        </footer>
+        
+    </div>
+
+    
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="./js/libs/jquery-3.3.1.min.js"></script>
